FIX: Corregido overflow en la sección de listado de solicitudes

--- a/client/src/static/css/pages/listProperties.css
+++ b/client/src/static/css/pages/listProperties.css
@@ -3,6 +3,7 @@
     max-width: 1200px;
     width: 100%;
     margin-top: 50px;
+    overflow: initial;
 }
 
 .site-content-sidebar > .sidebar {
